# arduino_frequency_generator_bluetooth

./: CMakeLists.txt  FrequencyCalculator.cpp  FrequencyCalculator.h  Logging.cpp  Logging.h  OnOffButton.h  PwmChanger.h  README.md  SerialBuffer.cpp  SerialBuffer.h  core.cpp  fast_pwm_reference.ino  simutron.simu  test1_original.ino
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
